--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,11 @@
-recipe: default.v1
-
+# Configuration for Rasa NLU.
+# https://rasa.com/docs/rasa/nlu/components/
 language: ru
 
 pipeline:
-  - name: "spellchecking.CustomNLUComponent"
+# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
+# # If you'd like to customize it, uncomment and adjust the pipeline.
+# # See https://rasa.com/docs/rasa/tuning-your-model for more information.
   - name: WhitespaceTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
@@ -13,20 +15,22 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 2
-    constrain_similarities: true
+    epochs: 200
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 2
-    constrain_similarities: true
+    epochs: 200
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
 
+# Configuration for Rasa Core.
+# https://rasa.com/docs/rasa/core/policies/
 policies:
+# # No configuration for policies was provided. The following default policies were used to train your model.
+# # If you'd like to customize them, uncomment and adjust the policies.
+# # See https://rasa.com/docs/rasa/policies for more information.
   - name: MemoizationPolicy
-  - name: RulePolicy
   - name: TEDPolicy
     max_history: 5
-    epochs: 2
-    constrain_similarities: true
+    epochs: 200
+  - name: RulePolicy
