--- a/data/synonym.yml
+++ b/data/synonym.yml
@@ -289,11 +289,8 @@ nlu:
 #     - терминал
 #     - банкомат
 
-# - synonym: guarant
-#   examples: |
-#     - хранения у гаранта
-#     - у гаранта
-#     - гаранта
+
+
 
 # - synonym: exchanger
 #   examples: |
@@ -342,7 +339,6 @@ nlu:
     - добавить
     - внести
     - вносить
-    - вввести
     - ввести
 
 - synonym: withdraw
@@ -367,9 +363,20 @@ nlu:
     - виводом
     - вевысти
     - взять
+    - вввести
 
 
-
+- synonym: exchange
+  examples: |
+    - конвертация
+    - конвертации
+    - обменять
+    - обмена
+    - обмен
+    - обменял
+    - конвертировать
+    - обменивать
+    - поменять
 
 
 
@@ -490,11 +497,9 @@ nlu:
 
 - synonym: wmp
   examples: |
-    - в рублях
     - vmp
     - wmp счет
     - в рублях кошелек
-    - валюту с российским рублем
     - вмп
     - счет wmp
     - счет рублевый
@@ -570,19 +575,14 @@ nlu:
     - р сщет
     - р-кошелек
     - ркошелек
-    - российские рубли
-    - российский
     - российский кошелек
     - российский кошелька
     - российский рубль
     - российский счет
     - руб кошелек
     - руб левый кошелек
-    - рубл
-    - рублевого
     - рублевого кошелька
     - рублевой кошелек
-    - рублевый
     - рублевый кашелек
     - рублевый кошелек
     - рублевый кошелек wmr
@@ -590,17 +590,10 @@ nlu:
     - рублевый кошелька
     - рублевый кошолек
     - рублевый счет
-    - рублей
     - рублей кошелек
-    - рубли
     - рублкевый кошелек вебмани
-    - рубль
     - рубль кошелек
     - рубльовыв кошельок
-    - рубля
-    - рублями
-    - рубыль
-    - русский
     - русский кашилек
     - русский кошелек
     - русской валютой
@@ -614,7 +607,6 @@ nlu:
     - p кошелька
     - p - кошелек
     - p-кошелек
-    - rub
     - rub кошелька
     - wmр
     - wmр кошелек
@@ -631,6 +623,27 @@ nlu:
     - wmpp кошелька
     - кошелек рубль
     - wmp-кошелек
+    - p-кошелька
+    - wmp-счету
+    - кошелька p
+    - кошелька wmp
+
+- synonym: rub
+  examples: |
+    - в рублях
+    - валюту с российским рублем
+    - российские рубли
+    - российский
+    - рубл
+    - рублевого
+    - рублевый
+    - рублей
+    - рубли
+    - рубль
+    - рубля
+    - рублями
+    - рубыль
+    - русских рублях
 
 - synonym: wme
   examples: |
@@ -641,14 +654,11 @@ nlu:
     - карту wme
     - вмее кошелька
     - е кошелек
-    - евриковый
     - кошелек wme в евро
     - кошелек с евро валютой
     - евриковый кошелька
-    - евро
     - евро кошелек
     - евро кошелька
-    - евровый
     - евровый кошелек
     - евровый кошелька
     - карту с евро
@@ -671,17 +681,13 @@ nlu:
     - кошелька wmee
     - счет в евро
     - счет в euro
-    - эвриковый
     - эвриковый кошелька
-    - эвро
     - эвро кошелька
-    - эвровый
     - эвровый кошелька
     - электронный кошелек в евро
     - e
     - e кошелек
     - e кошелька
-    - eur
     - eur кошелька
     - wme
     - wme кошелек
@@ -690,37 +696,29 @@ nlu:
     - wmee кошелька
     - счет wme
     - wme-кошелек
+    - кошелк wme
+
+- synonym: eur
+  examples: |
+    - евриковый
+    - евро
+    - евровый
+    - эвриковый
+    - эвро
+    - эвровый
 
 - synonym: wmb
   examples: |
-    - белорускими
-    - белоруских рублей
-    - белоруских рублях
     - vmb
-    - белоруссии
     - кошелек в беларуских рублях
-    - белорусские
-    - белорусский
     - белорусский кошелек
     - белорусский кошелька
     - белорусский рубль
     - белорусский рубль кошелька
     - белорусский рублях
     - белорусским рублем
-    - белорусскими
     - белорусскими рублями
-    - белорусских
-    - белорусских руб
-    - белорусских рублей
-    - белорусских рублях
-    - белорусского
-    - белорусской валюте
-    - белорусской валютой
-    - белорусском
-    - белорусскую
-    - бульбашный
     - бульбашный кошелька
-    - бульбашовый
     - бульбашовый кошелька
     - вмб
     - вмб кошелька
@@ -744,7 +742,6 @@ nlu:
     - b
     - b кошелек
     - b кошелька
-    - byn
     - byn кошелька
     - wmб
     - wmb
@@ -753,6 +750,28 @@ nlu:
     - wmbb
     - wmbb кошелька
     - wmb-кошелек
+    - кошелек в wmb
+
+- synonym: byn
+  examples: |
+    - белорускими
+    - белоруских рублей
+    - белоруских рублях
+    - белоруссии
+    - белорусские
+    - белорусский
+    - белорусскими
+    - белорусских
+    - белорусских руб
+    - белорусских рублей
+    - белорусских рублях
+    - белорусского
+    - белорусской валюте
+    - белорусской валютой
+    - белорусском
+    - белорусскую
+    - бульбашный
+    - бульбашовый
 
 - synonym: wmg
   examples: |
@@ -798,47 +817,27 @@ nlu:
 
 - synonym: wmz
   examples: |
-    - американский
-    - амеровский
     - амеровский кошелька
     - vmz
     - американский счет
-    - бакс
-    - баксы
-    - бакс сша
     - бакс сша кошелька
-    - долл
-    - баксовый
-    - баксовый сша
     - баксовый сша кошелька
     - вмз
     - вмз кошелек
     - вмзз
     - вмзз кошелька
-    - долар
     - долар кошелька
-    - долар сша
-    - доларовый
     - доларовый кошелек
-    - доларовый сша
     - доларовый сша кошелька
-    - доллар
-    - доллар сша
     - доллар сша кошелька
-    - доллара
     - кошелька долларового
     - долларавый кашелек
-    - долларами
     - долларового кошелька
-    - долларах
-    - долларовый
     - долларовый кашелек
     - долларовый кошелек
     - долларовый кошелек wmz
     - долларовый кошелька
     - долларовый счет
-    - долларовый сша
-    - доллары
     - долловый интернет кошелек
     - долоровый кошелек
     - долоровый счет
@@ -893,7 +892,6 @@ nlu:
     - сщет для валюты usd
     - щет wmz
     - электронный кошелек wmz
-    - usd
     - wmz
     - wmz карту
     - wmz кашелек
@@ -917,6 +915,38 @@ nlu:
     - кошелек типа wmz 
     - кошелек типа вмз
     - wmz-кошелька
+    - wmz кошелека
+    - wmz кошелк
+    - кошелька z
+    - кошельков wmz
+    - счета wmz
+    - доларного кашелька
+
+
+- synonym: usd
+  examples: |
+    - американский
+    - амеровский
+    - бакс
+    - бакс сша
+    - баксовый
+    - баксовый сша
+    - баксы
+    - долар
+    - долар сша
+    - доларовый
+    - доларовый сша
+    - долл
+    - доллар
+    - доллар сша
+    - доллара
+    - долларами
+    - долларах
+    - долларовый
+    - долларовый сша
+    - доллары
+    - $
+    - usa
 
 - synonym: wmk
   examples: |
@@ -927,20 +957,15 @@ nlu:
     - к
     - wmk кошелька
     - wmk-кошелек
-    - казахский
     - казахский кошелька
     - казахский кошелек
-    - казахский сум
     - казахскрий тенге кошелек
-    - казахстанский
     - кошелек для тенге
     - кошелек типа вмк
     - кошелек wmk
     - кошелька вмк
-    - кошелька казахский сум
     - кошелька казахстанский
     - кошелька kzt
-    - тенге
     - тенге кошелек
     - k
     - k кошелек
@@ -953,6 +978,14 @@ nlu:
     - wmkk кошелька
     - кошелек типа wmk
     - кошелек типа вмк
+#    - казахский сум
+#    - кошелька казахский сум
+
+- synonym: kzt
+  examples: |
+    - казахский
+    - казахстанский
+    - тенге
 
 - synonym: wmx
   examples: |
@@ -1033,7 +1066,6 @@ nlu:
 
 - synonym: wmy
   examples: |
-    - в сомы
     - вмвай
     - вмвай кошелька
     - вму
@@ -1060,8 +1092,6 @@ nlu:
     - узбекский сом кошелек
     - узбекский сум
     - узбекский сум кошелька
-    - uzb
-    - uzs
     - uzs кошелька
     - wmy
     - wmy кошелек
@@ -1076,6 +1106,11 @@ nlu:
     - кошелек wmy
     - wmy кошелька
     - wmy-кошелек
+
+- synonym: uzs
+  examples: |
+    - в сомы
+    - uzb
 
 - synonym: wmr
   examples: |
@@ -1158,6 +1193,7 @@ nlu:
     - кошелек долговой
     - wmd кошелька
     - кошелек типа d
+    - кашелька wmd
 
 - synonym: wmc
   examples: |
@@ -1199,20 +1235,10 @@ nlu:
 
 - synonym: wmu
   examples: |
-    - гривен
-    - гривна
-    - гривнами
     - vmu
-    - гривнах
-    - гривне
     - wmu-кошелек
-    - гривневой
-    - гривневый
     - гривневый кашелек
     - гривневый кошелек
-    - гривной
-    - гривну
-    - гривны
     - гртвневый кошелек
     - карту wmu
     - кошел в эквиваленте гривна
@@ -1242,24 +1268,34 @@ nlu:
     - кошилек гривна
     - счет wmu
     - счот ua
-    - украински
     - украински кошелек
     - украинские гривны
-    - украинский
     - украинский кошелек
     - украинский кошелек в гривне
     - украинский счет
-    - украинской гривней
-    - украинской гривни
     - u
-    - ua
     - ua кошелек
-    - uah
     - wmu
     - wmu кошелек
     - wmu кошелька
     - кошелек типа wmu
     - u кошелек
+
+- synonym: uah
+  examples: |
+    - гривен
+    - гривна
+    - гривнами
+    - гривнах
+    - гривне
+    - гривневой
+    - гривневый
+    - гривной
+    - гривну
+    - гривны
+    - украинской гривней
+    - украинской гривни
+    - ua
 
 - synonym: wmf
   examples: |
@@ -1351,6 +1387,7 @@ nlu:
     - кошелька лайткойновский
     - кошелька лайткойновый
     - кошелька litecoin
+    - кошелек litecoin
     - кошелька ltc
     - лайткоин
     - лайткойн
@@ -1427,6 +1464,20 @@ nlu:
     - кошельку qiwi
     - кошельком qiwi
     - кошельке qiwi
+    - kiwi
+    - qbwi
+    - qiwi
+    - qiwi wallet
+    - qiwi кошелка
+    - qiwi счет
+    - qlwl
+    - qlwl кошелек
+    - киви кашелек
+    - киви кашелька
+    - киви кошелка
+    - кивикошелек
+    - счет киви
+    - платежную систему киви
 
 - synonym: юmoney
   examples: |
@@ -1475,6 +1526,13 @@ nlu:
     - кошельком ymoney
     - кошельке ymoney
     - яндекс деньги
+    - yandex кошелек
+    - кошелек яндекса
+    - счет яндекс-денег
+    - юmoney
+    - юмони
+    - яндекс-деньги
+    - яндес кошелек
 
 - synonym: payoneer
   examples: |
@@ -1519,6 +1577,15 @@ nlu:
     - мобильный
     - мобильную связь
     - номер сим карты
+    - баланса телефона
+    - билайн
+    - мобильного оператора
+    - мобильный баланс
+    - мтс
+    - мтс беларусь
+    - счет мобильного
+    - теле2
+    - телефонного баланса
 
 - synonym: bank_card
   examples: |
@@ -1571,6 +1638,46 @@ nlu:
     - украинскую карту
     - банковские карты казахстана
     - мастеркард
+    - visa карты
+    - банковской карточки приватбанк
+    - банковской моей карты
+    - бербанковской карты
+    - вертикальную карту
+    - виза
+    - виза карти
+    - виза карту
+    - визы
+    - виртуальной карты
+    - виртуальную картк
+    - виртуальный карту
+    - гривневую карту
+    - дебетовою карту
+    - долл карту
+    - карт банк себербанк
+    - картой visa
+    - карточки
+    - карту банка
+    - карту банковскую
+    - карту виза
+    - карту маестро
+    - карту мир
+    - карту моно банк
+    - карту российского банка
+    - карту сбербанк
+    - карту сбербанка рф
+    - карту своего банка
+    - карту украинского банка
+    - карты мир
+    - карты российского банка
+    - карты сбер банка
+    - карты сбербанк
+    - карты сбербанка
+    - карты тинькофф
+    - латвийскую карту
+    - пластиковую карту узбекистана
+    - российской карты
+    - рублевую карту
+    - сбербанк карту
 
 - synonym: bank
   examples: |
@@ -1596,6 +1703,12 @@ nlu:
     - банковскому счету
     - банковским счетом
     - банковском счете
+    - банковским переводом
+    - банковским перевоздом
+    - сбер
+    - сбербанк онлайн
+    - сбербанка онлайн
+    - тинькофф банк
 
 - synonym: electronic_money
   examples: |
@@ -1616,3 +1729,47 @@ nlu:
     - наличными
     - наличных
     - терминал
+    - обменный пункт
+    - терминала наличными
+    - обналичить
+    - физические деньги
+
+- synonym: guarant
+  examples: |
+    - гаранта
+    - у гаранта
+    - хранения у гаранта
+
+- synonym: skrill
+  examples: |
+    - skrill
+    - кошилька skril
+    - кошилька skrill
+    - скрил
+
+- synonym: payeer
+  examples: |
+    - пэйер
+    - пейер
+    - payeer
+    - електроный кошелек payeer
+    - кошелек payeer
+
+- synonym: easypaisa
+  examples: |
+    - изипейса
+
+- synonym: easypay
+  examples: |
+    - easypay
+    - электронного кошелька easypay
+
+- synonym: payoneer
+  examples: |
+    - платежную систему paoyneer
+
+- synonym: paypal
+  examples: |
+    - пэйпал
+
+
