--- a/domain.yml
+++ b/domain.yml
@@ -14,47 +14,60 @@ intents:
 entities: 
    - verb
 
+
+   - fee:
+       roles:
+       - min
+       - no
+
    - bank_card:
        roles:
        - from
        - to
+       - through
    - bank:
        roles:
        - from
        - to
-
+       - through
    - electronic_money:
        roles:
        - from
        - to
+       - through
    - cash:
        roles:
        - from
        - to
-
+       - through
    - telephone_number:
        roles:
        - from
        - to
+       - through
    - guarant:
        roles:
        - from
        - to
+       - through
    - name:
        roles:
        - from
        - to
+       - through
    - purse_type:
        roles:
        - from
        - to
+       - through
+
+
+
+
 
 forms:
-    transfer_form:
-      required_slots:
-        verb:
-        - type: from_entity
-          entity: verb
+  transfer_form:
+    required_slots: {}
 
 slots:
   purse_type:
@@ -85,6 +98,20 @@ slots:
     - ltc
     - eth
     - usdt
+
+  # currency:
+  #   type: rasa.shared.core.slots.CategoricalSlot
+  #   initial_value: null
+  #   auto_fill: true
+  #   influence_conversation: true
+  #   values:
+  #   - rub
+  #   - eur
+  #   - byn
+  #   - usd
+  #   - kzt
+  #   - uzs
+  #   - uah
 
   transfer_direction:
     type: rasa.shared.core.slots.CategoricalSlot
@@ -172,6 +199,7 @@ slots:
     values:
     - withdraw
     - topup
+    - exchange
 
   transfer_purse_type:
     type: rasa.shared.core.slots.CategoricalSlot
@@ -213,8 +241,6 @@ slots:
     - transfer_cash
     - transfer_telephone_number
     - transfer_guarant
-
-
 
 responses:
   utter_transfer.wheres_money:
@@ -306,8 +332,8 @@ responses:
   utter_transfer.telephone_number:
   - text: "utter_transfer.telephone_number"
 
-  utter_transfer.bank:
-  - text: "utter_transfer.bank"
+  utter_transfer.banks:
+  - text: "utter_transfer.banks"
 
   utter_transfer.cash:
   - text: "utter_transfer.cash"
@@ -412,10 +438,83 @@ responses:
 
 
   utter_transfer_form_from_None_transfer_telephone_number:
-  - text: "utter_transfer_form_from_None_transfer_telephone_number"
+  - text: "Вывести средства на счет мобильного телефона Вы можете на странице: https://telepay.webmoney.ru/ru/mobile"
 
   utter_transfer_form_to_None_transfer_telephone_number:
   - text: "utter_transfer_form_to_None_transfer_telephone_number"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#utter_transfer_form_exchange_transfer_purse_type
+  utter_transfer_form_exchange_wmp:
+  - text: "В связи с отзывом ЦБ РФ лицензии на осуществление банковских операций у кредитной организации АО Банк «ККБ», предоставлявшей электронные денежные средства (ЭДС) в качестве инструментов учета на R- и P-кошельках, с 11 февраля 2022 года операции с WMR и WMP стали невозможны. В этой ситуации Оператором Системы было поручено уполномоченному Агенту за свой счет до 05.03.2022 обменять WMR и WMP на WMZ по курсу USD/RUB, установленному ЦБ РФ на 26.02.2022, – 83.55. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/ Новость: https://news.wmtransfer.com/blog/vozmeschenie-sredstv-vladeltsam-p-i-r-koshelkov"
+
+  utter_transfer_form_exchange_wmr:
+  - text: "В связи с отзывом ЦБ РФ лицензии на осуществление банковских операций у кредитной организации АО Банк «ККБ», предоставлявшей электронные денежные средства (ЭДС) в качестве инструментов учета на R- и P-кошельках, с 11 февраля 2022 года операции с WMR и WMP стали невозможны. В этой ситуации Оператором Системы было поручено уполномоченному Агенту за свой счет до 05.03.2022 обменять WMR и WMP на WMZ по курсу USD/RUB, установленному ЦБ РФ на 26.02.2022, – 83.55. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/ Новость: https://news.wmtransfer.com/blog/vozmeschenie-sredstv-vladeltsam-p-i-r-koshelkov"
+
+  utter_transfer_form_exchange_wmu:
+  - text: "Согласно Указу Президента Украины №126/2018 (Приложение 2. пп. 428, 1-12) система Webmoney Transfer внесена в санкционный список Совета национальной безопасности и обороны Украины. Это повлекло за собой запрет Гаранту WMU совершать банковские операции в гривне со своих счетов. Поэтому с 28 мая 2020 года титульные знаки на U-кошельках (обязательства Украинского Гарантийного Агентства в гривнах) были автоматически сконвертированы в WMZ по курсу НБУ на дату обмена за счет собственных средств системы WebMoney Transfe. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/"
+
+  utter_transfer_form_exchange_wmc:
+  - text: "utter_transfer_form_exchange_wmc"
+
+  utter_transfer_form_exchange_wmd:
+  - text: "utter_transfer_form_exchange_wmd"
+
+  utter_transfer_form_exchange_mdl:
+  - text: "utter_transfer_form_exchange_mdl"
+
+
+
+
+
+
+
+
+
+
+
+#utter_transfer_form_transfer_purse_type
+  utter_transfer_form_wmp:
+  - text: "В связи с отзывом ЦБ РФ лицензии на осуществление банковских операций у кредитной организации АО Банк «ККБ», предоставлявшей электронные денежные средства (ЭДС) в качестве инструментов учета на R- и P-кошельках, с 11 февраля 2022 года операции с WMR и WMP стали невозможны. В этой ситуации Оператором Системы было поручено уполномоченному Агенту за свой счет до 05.03.2022 обменять WMR и WMP на WMZ по курсу USD/RUB, установленному ЦБ РФ на 26.02.2022, – 83.55. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/ Новость: https://news.wmtransfer.com/blog/vozmeschenie-sredstv-vladeltsam-p-i-r-koshelkov"
+
+  utter_transfer_form_wmr:
+  - text: "В связи с отзывом ЦБ РФ лицензии на осуществление банковских операций у кредитной организации АО Банк «ККБ», предоставлявшей электронные денежные средства (ЭДС) в качестве инструментов учета на R- и P-кошельках, с 11 февраля 2022 года операции с WMR и WMP стали невозможны. В этой ситуации Оператором Системы было поручено уполномоченному Агенту за свой счет до 05.03.2022 обменять WMR и WMP на WMZ по курсу USD/RUB, установленному ЦБ РФ на 26.02.2022, – 83.55. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/ Новость: https://news.wmtransfer.com/blog/vozmeschenie-sredstv-vladeltsam-p-i-r-koshelkov"
+
+  utter_transfer_form_wmu:
+  - text: "Согласно Указу Президента Украины №126/2018 (Приложение 2. пп. 428, 1-12) система Webmoney Transfer внесена в санкционный список Совета национальной безопасности и обороны Украины. Это повлекло за собой запрет Гаранту WMU совершать банковские операции в гривне со своих счетов. Поэтому с 28 мая 2020 года титульные знаки на U-кошельках (обязательства Украинского Гарантийного Агентства в гривнах) были автоматически сконвертированы в WMZ по курсу НБУ на дату обмена за счет собственных средств системы WebMoney Transfe. Проверьте историю своего WMZ кошелька на сервере https://report.wmtransfer.com/"
+
+  utter_transfer_form_wmc:
+  - text: "utter_transfer_form_wmc"
+
+  utter_transfer_form_wmd:
+  - text: "utter_transfer_form_wmd"
+
+  utter_transfer_form_mdl:
+  - text: "utter_transfer_form_mdl"
+
+
+
+
 
 
 
@@ -714,10 +813,15 @@ responses:
 
 
 
+  # utter_transfer_form_None_None_None:
+  #   - text: "Вы можете ознакомиться с инструкцией о передаче средств на странице: https://wiki.webmoney.ru/projects/webmoney/wiki/peredacha_sredstv_v_wm_keeper_standard Обращаем Ваше внимание на то, что перевод возможен только между кошельками одного типа, если Вы хотите передать средств на кошелёк другого типа, то Вам необходимо сначала обменять средства между Вашими кошельками."
 
 
+  utter_transfer_form_None_None_None:
+    - text: "Вы можете ознакомиться с инструкцией о передаче средств на странице: https://wiki.webmoney.ru/projects/webmoney/wiki/peredacha_sredstv_v_wm_keeper_standard"
 
-
+  utter_transfer.exchange:
+    - text: "Вы можете ознакомиться с инструкцией по обмену средств на странице: https://wiki.webmoney.ru/projects/webmoney/wiki/obmen_wm_na_wm_v_wm_keeper_standard"
 
 
 
@@ -729,6 +833,7 @@ actions:
  - action_ask_transfer_form_transfer_method
  - action_transfer_form_message
  - action_slots_restart
+ - action_ask_transfer_form_transfer_direction
 
 session_config:
   session_expiration_time: 60
