--- a/data/nlu/purses.yml
+++ b/data/nlu/purses.yml
@@ -7,7 +7,7 @@ nlu:
      - 660364934583 wmid у меня [кошелек в гривнах](purse_type) пропал
      - [p кашелек](purse_type) не отображается на главном экране
      - [wmr кошелек](purse_type) не отображается
-     - [кошелек](purse_type) не отображается
+     - [кошелек](purse) не отображается
      - [рублевый кошелек](purse_type) так и не отображается на главной странице
      - а [российского кошелька](purse_type) больше нету
      - а где [рублевый кошыльок](purse_type) делса
@@ -21,7 +21,7 @@ nlu:
      - а куда у меня пропали все кошельки
      - а почему у меня не отображается [кошелек wmz](purse_type)
      - а почему у меня нет кошелька в приложении
-     - а почему это [кошелек](purse_type) не отображается
+     - а почему это [кошелек](purse) не отображается
      - а почему я невижу [р кошелек](purse_type)
      - в мобильном приложении добавила [евровый кошелек](purse_type) но он не отображается при этом пишут что он уже подключен
      - в мобильном приложении я не вижу свой [р-кошелек](purse_type)
@@ -68,7 +68,7 @@ nlu:
      - не отображается [wmp кошелек](purse_type) в чем причина
      - не отображается [wmz кошелек](purse_type)
      - не отображается [кошелек wmr](purse_type)
-     - не отображается [кошелек](purse_type)
+     - не отображается [кошелек](purse)
      - не отображается [р кошелек](purse_type)
      - не отображается [р кошелек](purse_type) на главном экране
      - не отображается [р кошелек](purse_type) что делать
@@ -80,18 +80,18 @@ nlu:
      - некоторое время назад я уже пользовался вашим сервисом и создавал кошельки но сейчас не могу найти их что произощло куда они подевались
      - ненайду свой [wmr](purse_type)
      - ничего не понимаю куда делся мой [рублевый кошелек](purse_type) он был создано много лет назад
-     - новый [кошелек](purse_type) до сих пор не отображается
-     - новый [кошелек](purse_type) не отображается в списках
+     - новый [кошелек](purse) до сих пор не отображается
+     - новый [кошелек](purse) не отображается в списках
      - по чему пропали [wmu кошелек](purse_type)
      - подскажите куда пропал мой [wmp кошелек](purse_type)
      - подскажите пожалуйста куда пропал [wmu эквивалентный гривневой валюте](purse_type) возможно ли создать подобный кошелек на данный момент времени
      - подскажите что делать если у меня пропал [wmu кошелек](purse_type)
      - почему [кошелек в рублях](purse_type) не отображается
      - почему [кошелек р](purse_type) не отображается в мобильном приложении
-     - почему [кошелек](purse_type) не отображается в главном меню приложения
-     - почему [кошелек](purse_type) не отображается в личном кабинете
-     - почему [кошелек](purse_type) не отображается в приложении
-     - почему [кошелек](purse_type) не отображается на главном меню
+     - почему [кошелек](purse) не отображается в главном меню приложения
+     - почему [кошелек](purse) не отображается в личном кабинете
+     - почему [кошелек](purse) не отображается в приложении
+     - почему [кошелек](purse) не отображается на главном меню
      - почему [р кошелек](purse_type) не отображается на главной странице
      - почему [р кошелек](purse_type) не отображается на главном меню
      - почему [р кошелек](purse_type) не отображается на главном экране
@@ -106,20 +106,20 @@ nlu:
      - почему мой [кошелек wmp](purse_type) не отображается на главной
      - почему мой [кошелек wmr](purse_type) не действителен
      - почему мой [кошелек wmr](purse_type) не доступен
-     - почему мой [кошелек](purse_type) не отображается на главном экране
+     - почему мой [кошелек](purse) не отображается на главном экране
      - почему на главной странице не отображается [рублевый кошелек](purse_type)
      - почему на главном экране не отображается мой [рублевый кошелек](purse_type)
      - почему не вижу кошелек
-     - почему новый [кошелек](purse_type) не отображается в личных кошельках
-     - почему новый [кошелек](purse_type) не отображается в приложении
+     - почему новый [кошелек](purse) не отображается в личных кошельках
+     - почему новый [кошелек](purse) не отображается в приложении
      - почему пропали кошельки
      - почему у меня не отображается [кошелек в рублях](purse_type) который
      - почему у меня не отображается [р кошелек](purse_type) на главном экране
      - почему у меня не отображается новый [кошелек wmp](purse_type)
      - почему у меня отображается только один [wmp кошелек](purse_type)
-     - почему у меня отображается только один [кошелек](purse_type)
-     - почему у меня этот [кошелек](purse_type) не отображается
-     - почему этот [кошелек](purse_type) не отображается
+     - почему у меня отображается только один [кошелек](purse)
+     - почему у меня этот [кошелек](purse) не отображается
+     - почему этот [кошелек](purse) не отображается
      - почему я не вижу кошелек
      - приветствую пропал [wmp кошелек](purse_type)
      - пропавшие кошельки
@@ -140,8 +140,8 @@ nlu:
      - у меня мои кошедьки куда пропали [wmp](purse_type) и [wmr](purse_type)
      - у меня не отображается [wmz кошелек](purse_type)
      - у меня не отображается [кошелек wmp](purse_type)
-     - у меня не отображается [кошелек](purse_type)
-     - у меня не отображается этот [кошелек](purse_type)
+     - у меня не отображается [кошелек](purse)
+     - у меня не отображается этот [кошелек](purse)
      - у меня пропал [vmp кошелек](purse_type) а на нем были деньги
      - у меня пропал [кошелек wmr](purse_type) что происходит
      - у меня пропал кошелек
